[project]
name = "chatcompletions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.6.0",
    "fastapi>=0.115.12",
    "llm-guard>=0.3.15",
    "nest-asyncio>=1.6.0",
    "openai>=1.70.0",
    "pip>=25.0.1",
    "uvicorn>=0.34.0",
]
